
Änderungen
----------

v0.8.1 (??.10.2010)
 * New hook in merge profiles

v0.8.0 (21.10.2010)
 * BE module refactoring

v0.7.7 (26.09.2010)
 * #39: Sort order of clubs can be changed to name

v0.7.6 (16.09.2010)
 * New method getInstance in tx_cfcleague_models_Profile
 * Register new match notes with tx_cfcleague_util_Misc::registerMatchNote()

v0.7.5 (13.09.2010) (not released)
 * Models and services extended for statistics integration
 * Requirement of lib/div removed

v0.7.4 (03.09.2010)
 * Quick input field for liveticker in TYPO3 4.4 works again
 * TeamNotes for coaches and supporters possible
 * Bugfix tx_cfcleague_models_Competition::getGroup()

v0.7.3 (17.07.2010)
 * BE modul CSS styles fixed for TYPO3 4.4
 * Matches: New field sets for set results

v0.7.2 (04.07.2010)
 * Quick input field for liveticker in TYPO3 4.4 deactivated (JS problems)
 * Country fields for stadiums and clubs

v0.7.1 (03.07.2010)
 * Model classes extended
 * Prev/Next-Buttons in Round-Selector
 * search_Teams: Relation to competition is possible
 * Clubs: New fields for geo coordinates

v0.7.0 (17.05.2010)
 * Manage Teams: SQL error fixed

v0.6.5 (11.05.2010) (not released)
 * All dependencies to tx_div removed
 * Clubs: Main sorting field for Selectbox is now city and then name. 
 * Team: Thumbnail for logo in TCA-Form
 * Dependency to DAM is optional now. But there are some features lost without DAM!

v0.6.3 (02.01.2010)
 * #25: Quick input field for liveticker 

v0.6.2 (22.11.2009)
 * #17: New relation stadiums to tt_address 

v0.6.1 (08.11.2009)
 * #12 old sub-module for matchtable creation removed

v0.6.0 (07.11.2009)
 * New class tx_cfcleague_util_Cache
 * New methods in tx_cfcleague_models_Club

v0.5.6 (06.11.2009) (not released)
 * Multiple agegroups for competitions
 * Age group field for teams
 * New service class for clubs
 * Matchnote types can be extended without PHP code

v0.5.5 (18.10.2009) (not released)