@@ -4,6 +4,7 @@
 
 v0.8.1 (??.10.2010)
  * New hook in merge profiles
+ * #46: Remove profiles from team
 
 v0.8.0 (21.10.2010)
  * BE module refactoring
